--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,157 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
+  font-family: 'Lato', sans-serif;
+}
+body{
+  overflow-x: hidden;
+  background-color: #fccb06;
+  margin: 0;
+}
+ul.header{
+  height: 80px;
+  padding-top: 20px;
+  display: inline-flex;
+  justify-self: center;
+  position: sticky;
+  top: 0;
+  margin: 0;
+  width: 100vw;
+  background-color: rgb(15, 15, 15);
+  border: 0;
+  border-bottom: 5px solid #fccb06;
+}
+li{
+  display: inline;
+  padding: 10px 30px;
+}
+li a{
+  font-size: 20px;
+  text-decoration: none;
+  color: #fbfcd4; 
+}
+li#active{
+  padding-right:800px;
+  font-size: 20px;
+  color: #fccb06;
+}
+.slide-show{
+  background-color: rgb(0, 0, 0);
+  width: 100vw;
+  height: 70vh;
+
+}
+.slide-show h1,.slide-show h4{
+  color: #fccb06;
+  width: max-content;
+  margin:10px auto;  
+}
+.slide-show h1{
+  font-size: 15rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.details{
+  height: 100vh;
+  background-color: #fccb06;
+  padding: 20px;
+  position: relative;
+}
+#box1{
+  /* margin: 10px; */
+  position:absolute;
+  top: 30px;
+  left: 20px;
+  background-color: #fbfcd4;
+  border-radius: 22px;
+  width: 70vw;
+  height: 80%;
+}
+#box1 h2{
+  padding: 20px;
+}
+#box2{
+  /* margin: 10px; */
+  position:absolute;
+  bottom: 30px;
+  right: 20px;
+  background-color: black;
+  border-radius: 22px;
+  width: 50vw;
+  height: 50%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* Second screen */
+.second-screen{
+  position: relative;
+  padding-top: 20px;
+  width: 99vw;
+  margin: 0;
+  height: 100vh;
+  background-color: #fccb06;
+}
+.second-view{
+  width: 93vw;
+  height: 95vh;
+  border-radius: 22px;
+  background-color: #fbfcd4;
+  padding: 20px;
+  position: relative;
+  margin: auto;
+}
+.second-view h3{
+  width: max-content;
+  margin: auto;
+}
+.events-list{
+  padding: 10px;
+  width: max-content;
+  margin: 10px;
+}
+
+.events-list li{
+  width: 50vw;
+  color: #fbfcd4;
+  height: 30vh;
+  background-color: black;
+}
+
+
+
+
+
+
+
+
+
+/* footer */
+ul.footer{
+  height: 500px;
+  width: 100vw;
+  background-color: black;
+}
+ul{
+  width: max-content;
+  margin: auto;
+}
+li h5{
+  color: aliceblue;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+@media(max-width :550px)  {
+  li{
+      display: none;
+
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .slide-show h1{
+      font-size: 8rem;
   }
-  to {
-    transform: rotate(360deg);
+  #box1{
+      height: 50%;
+      width: 80vw;
+  }
+  #box2{
+      height:33% ;
+      width: 77vw;
   }
 }
